# Portfolio-Backend-CPP

./: CMakeLists.txt  main.cpp
Data/: CareerExperience.h  CareerProject.h  ExternalLink.h  IDataSource.h  IDataSourceExporter.h
Data/Json/: JsonDataSource.cpp  JsonDataSource.h  JsonDataSourceExporter.cpp  JsonDataSourceExporter.h  JsonValues.h  data.json
Web/: IServer.h
Web/Drogon/: DrogonServer.cpp  DrogonServer.h  PortfolioController.cpp  PortfolioController.h  PortfolioPlugin.cpp  PortfolioPlugin.h
